--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome to Henri's Website />
+	<Welcome to receitaspraticas />
 </Layout>
