links-nos-botoes

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -16,8 +16,11 @@ import background from '../assets/background.svg';
 			<section id="links">
 				<a class="button" href="https://docs.astro.build">Receitas Práticas</a>
 				<a href="https://astro.build/chat"
-					><a class="button" href="https://docs.astro.build">Nosso Pinterest</a>
+					><a class="button" href="https://br.pinterest.com/receitaspraticasdevo/">Nosso Pinterest</a>
 						<a href="https://astro.build/chat"
+					></a>
+					<a class="button" href="https://amzn.to/3BUVOh6">Livro que recomendamos</a>
+						<a href="https://amzn.to/3BUVOh6"
 					></a>
 				</a>
 			</section>
