--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -14,8 +14,8 @@ import background from '../assets/background.svg';
 				Vamos construir um projeto de culinária.
 			</h1>
 			<section id="links">
-				<a class="button" href="https://docs.astro.build">Receitas Práticas</a>
-				<a href="https://astro.build/chat"
+				<a class="button" href="src/pages/posts/">Receitas Práticas</a>
+				<a href="src/pages/posts/"
 					><a class="button" href="https://br.pinterest.com/receitaspraticasdevo/">Nosso Pinterest</a>
 						<a href="https://astro.build/chat"
 					></a>
