--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,19 +1,18 @@
 ---
+import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
 ---
 <body>
-    <a href="/">Início</a>
+    <a href="/">Inicio</a>
     <a href="/about/">Sobre</a>
+    <a href="/blog/">Blog</a>
 
-    <h1>Nosso site Receitas Práticas de Vó</h1>
-    <h1>Sobre Mim</h1>
-    <h2>Esse é o meu novo site de gastronomia, feito com Astro!</h2>
+    <h1>Meu Site Gastronomia</h1>
+    <h1>So mais um apaixonado por comida boa</h1>
+    <h2>... e meu novo site Astro!</h2>
   
-    <p>Estou resolvendo o tutorial introdutório do Astro. E, criando esse site de gastronomia</p>
+    <p>Estou resolvendo o tutorial introdutório do Astro. Esta é a segunda página no meu website, e é a primeira que eu mesmo construí!</p>
   
-    <p>Este site será atualizado enquanto eu completo mais desse tutorial, então continue verificando e veja como minha jornada está indo!</p>
+    <p>Este site será atualizado enquanto eu completo mais desse tutorial, então continue com fome e veja como minha jornada está indo!</p>
   </body>
-<Layout>
-	
-</Layout>
