receitas-novas-botao

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,9 @@
     <h1>Meu Site de Gastronomia</h1>
     <h1>Sobre Mim</h1>
     <h2>... e meu novo site Astro!</h2>
+    <ul>
+        <li><a href="/post-1/">Postagem 1</a></li>
+      </ul>
   
     <p>Estou criando esse site que será um acervo de receitas</p>
   
