--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -7,20 +7,20 @@ import background from '../assets/background.svg';
 	<img id="background" src={background.src} alt="" fetchpriority="high" />
 	<main>
 		<section id="hero">
-			<a href="https://astro.build"
+			<a href="https://receitaspraticasdevo.netlify.app/"
 				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
 			>
 			<h1>
-				Vamos construir um projeto de culinária.
+				Escolha uma receita para preparar
 			</h1>
 			<section id="links">
-				<a class="button" href="/menu/">Receitas Práticas</a>
-				<a href="src/pages/posts/"
-					><a class="button" href="https://br.pinterest.com/receitaspraticasdevo/">Nosso Pinterest</a>
-						<a href="https://astro.build/chat"
+				<a class="button" href="/post-1/">Brigadeiro</a>
+				<a href="/post-1/"
+					><a class="button" href="/post-2/">Strogonoff</a>
+						<a href="/post-2/"
 					></a>
-					<a class="button" href="https://amzn.to/3BUVOh6">Livro que recomendamos</a>
-						<a href="https://amzn.to/3BUVOh6"
+					<a class="button" href="/post-3/">Feijoada</a>
+						<a href="/post-3/"
 					></a>
 				</a>
 			</section>
