--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -15,7 +15,7 @@ import background from '../assets/background.svg';
 			</h1>
 			<section id="links">
 				<a class="button" href="/menu/">Receitas Práticas</a>
-				<a href="src/pages/posts/"
+				<a href="src/pages/menu/"
 					><a class="button" href="https://br.pinterest.com/receitaspraticasdevo/">Nosso Pinterest</a>
 						<a href="https://astro.build/chat"
 					></a>
