--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -23,7 +23,7 @@ import background from '../assets/background.svg';
 						<a href="/post-3/"
 					></a>
                     <a class="button" href="https://receitaspraticasdevo.netlify.app/">Volta pro inicío</a>
-						<a href="https://receitaspraticasdevo.netlify.app/"
+						<a href="https://receitaspraticasdevo.netlify.app/"></a>
 				</a>
 			</section>
 		</section>
