--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -22,8 +22,8 @@ import background from '../assets/background.svg';
 					<a class="button" href="/post-3/">Feijoada</a>
 						<a href="/post-3/"
 					></a>
-                    <a class="button" href="https://receitaspraticasdevo.netlify.app/">Volta pro inicío</a>
-						<a href="https://receitaspraticasdevo.netlify.app/"></a>
+                    <a class="button" href="/index/">Volta pro inicío</a>
+						<a href="/index/"></a>
 				</a>
 			</section>
 		</section>
